Add oauth2.0 controllers

--- a/app/views/create_item.scala.html
+++ b/app/views/create_item.scala.html
@@ -8,6 +8,7 @@
 @form(controllers.forms.routes.ItemController.createItemHandle()) {
     @helper.CSRF.formField
     @inputText(item("name"))
+    @inputText(item("price"))
     @inputText(item("description"))
 
 
