--- a/app/views/list_items.scala.html
+++ b/app/views/list_items.scala.html
@@ -4,6 +4,7 @@
     <strong>@item.name</strong>
     @item.description
     @item.id
+    @item.price
     @item.category
     <a href="@controllers.forms.routes.ItemController.updateItem(item.id)">Edit</a>
     <a href="@controllers.forms.routes.ItemController.deleteItem(item.id)">Delete</a>
