--- a/app/views/update_item.scala.html
+++ b/app/views/update_item.scala.html
@@ -10,6 +10,7 @@
     @helper.CSRF.formField
     <input name="id" id="id" value="@item("id").value" type="hidden" />
     @inputText(item("name"))
+    @inputText(item("price"))
     @inputText(item("description"))
 
 
