Change _id to Id

--- a/app/views/list_accounts.scala.html
+++ b/app/views/list_accounts.scala.html
@@ -2,8 +2,8 @@
 
 @for(account <- accounts) {
     @account.id
-    @account.first_name
-    @account.last_name
+    @account.firstName
+    @account.lastName
     @account.city
 
 
