Add image to db

--- a/app/views/create_item.scala.html
+++ b/app/views/create_item.scala.html
@@ -9,6 +9,8 @@
     @helper.CSRF.formField
     @inputText(item("name"))
     @inputText(item("price"))
+    @inputText(item("image"))
+
     @inputText(item("description"))
 
 
