Add image do DB

--- a/app/views/update_item.scala.html
+++ b/app/views/update_item.scala.html
@@ -11,6 +11,7 @@
     <input name="id" id="id" value="@item("id").value" type="hidden" />
     @inputText(item("name"))
     @inputText(item("price"))
+    @inputText(item("image"))
     @inputText(item("description"))
 
 
